--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@reduxjs/toolkit": "^1.9.2",
+    "@woocommerce/woocommerce-rest-api": "^1.0.1",
+    "cookie-parser": "^1.4.6",
     "next": "13.1.6",
+    "process": "^0.11.10",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
+    "redux-persist": "^6.0.0"
   }
 }
